feat: implement P0 features — search improvements, slash commands, wiki links
Search improvements (Feature 3):
- Push all filters (brain, cluster, tags) into SQL instead of Java-side filtering,
  fixing broken pagination
- Add ts_rank() for relevance ordering and ts_headline() for highlighted snippets
- Add GIN index on title field (V13 migration)
- Add NeuronSearchRepository with dynamic native SQL query
- Add SearchResultItem DTO with highlight and rank fields
- Add title search endpoint (GET /api/neurons/search) for autocomplete
- Frontend: debounced search-as-you-type (300ms), render highlighted snippets

Slash commands (Feature 1):
- Install @tiptap/suggestion and create SlashCommand extension
- Support format commands (headings, lists, blockquote, code block, divider)
  that execute within TipTap
- Support section commands (code editor, math, diagram, callout, image, table,
  audio) that insert new sections via parent SectionList callback
- Keyboard navigation (arrow keys, Enter, Escape) in popup

Bidirectional linking (Feature 2):
- Add WikiLink TipTap node extension with [[ autocomplete
- Search neurons by title via /api/neurons/search endpoint
- Render wiki links as clickable internal links
- Auto-sync editor-created links to neuron_links table on content save
- Add 'source' field to NeuronLink (manual vs editor) with V14 migration
- Show 'wiki' badge on editor-created links in ConnectionsPanel
- Rename incoming links section to "Backlinks"

Also fixes:
- Fix duplicate V11 migration (renamed to V12)
- Fix missing Neuron import in useNeuronHistory.ts

https://claude.ai/code/session_014xM87jr3Q3UZHJSxQMyLdf