@@ -1,30 +1,24 @@
 package com.wliant.brainbook.service;
 
-import com.wliant.brainbook.dto.NeuronResponse;
 import com.wliant.brainbook.dto.SearchResponse;
-import com.wliant.brainbook.dto.TagResponse;
-import com.wliant.brainbook.model.Neuron;
-import com.wliant.brainbook.repository.NeuronRepository;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
+import com.wliant.brainbook.dto.SearchResultItem;
+import com.wliant.brainbook.repository.NeuronSearchRepository;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
+@Transactional(readOnly = true)
 public class SearchService {
 
-    private final NeuronRepository neuronRepository;
+    private final NeuronSearchRepository neuronSearchRepository;
     private final NeuronService neuronService;
-    private final TagService tagService;
 
-    public SearchService(NeuronRepository neuronRepository, NeuronService neuronService, TagService tagService) {
-        this.neuronRepository = neuronRepository;
+    public SearchService(NeuronSearchRepository neuronSearchRepository, NeuronService neuronService) {
+        this.neuronSearchRepository = neuronSearchRepository;
         this.neuronService = neuronService;
-        this.tagService = tagService;
     }
 
     public SearchResponse search(String query, UUID brainId, UUID clusterId,
@@ -34,32 +28,16 @@ public class SearchService {
             return new SearchResponse(List.of(), 0);
         }
 
-        Page<Neuron> results = neuronRepository.search(query, PageRequest.of(page, size));
+        NeuronSearchRepository.SearchResult result = neuronSearchRepository.search(
+                query, brainId, clusterId, neuronTagIds, brainTagIds, page, size);
 
-        List<NeuronResponse> filtered = results.getContent().stream()
-                .filter(n -> brainId == null || brainId.equals(n.getBrainId()))
-                .filter(n -> clusterId == null || clusterId.equals(n.getClusterId()))
-                .map(n -> neuronService.getById(n.getId()))
-                .filter(n -> matchesNeuronTags(n, neuronTagIds))
-                .filter(n -> matchesBrainTags(n.brainId(), brainTagIds))
-                .collect(Collectors.toList());
+        List<SearchResultItem> items = result.rows().stream()
+                .map(row -> new SearchResultItem(
+                        neuronService.getById(row.id()),
+                        row.highlight(),
+                        row.rank()))
+                .toList();
 
-        return new SearchResponse(filtered, results.getTotalElements());
-    }
-
-    private boolean matchesNeuronTags(NeuronResponse neuron, List<UUID> neuronTagIds) {
-        if (neuronTagIds == null || neuronTagIds.isEmpty()) return true;
-        Set<UUID> neuronTags = neuron.tags().stream()
-                .map(TagResponse::id)
-                .collect(Collectors.toSet());
-        return neuronTags.containsAll(neuronTagIds);
-    }
-
-    private boolean matchesBrainTags(UUID brainId, List<UUID> brainTagIds) {
-        if (brainTagIds == null || brainTagIds.isEmpty()) return true;
-        Set<UUID> tags = tagService.getTagsForBrain(brainId).stream()
-                .map(TagResponse::id)
-                .collect(Collectors.toSet());
-        return tags.containsAll(brainTagIds);
+        return new SearchResponse(items, result.totalCount());
     }
 }
